Removes the link to coderush

--- a/bedrock/mozorg/templates/mozorg/about/history-details.html
+++ b/bedrock/mozorg/templates/mozorg/about/history-details.html
@@ -17,7 +17,7 @@
       {% trans coderush='http://clickmovement.org/coderush',
                sourcerelease='http://web.archive.org/web/20021001071727/wp.netscape.com/newsref/pr/newsrelease558.html'
       %}
-        The Mozilla project was <a href="{{ coderush }}">created in 1998</a>
+        The Mozilla project was created in 1998
         with the <a href="{{ sourcerelease }}">release of the Netscape browser
         suite source code</a>.
       {% endtrans %}
