--- a/bedrock/mozorg/templates/mozorg/about/manifesto.html
+++ b/bedrock/mozorg/templates/mozorg/about/manifesto.html
@@ -162,7 +162,7 @@
                 <section>
                   <h4>{{ _('Learn more') }}</h4>
                   <ul class="resources">
-                    <li><a href="https://webmaker.org/teach">{{ _('Use these free tools to teach the Web') }}</a></li>
+                    <li><a href="https://teach.mozilla.org/tools/">{{ _('Use these free tools to teach the Web') }}</a></li>
                     <li><a href="https://webmaker.org/resources/literacy/weblit-Composing">{{ _('Learn about creating and curating content for the Web') }}</a></li>
                   </ul>
                   <ul class="videos">
