--- a/media/css/firefox/australis/fx38_0_5/firstrun.less
+++ b/media/css/firefox/australis/fx38_0_5/firstrun.less
@@ -23,8 +23,19 @@ html {
 
 .rightcol {
     float: left;
-    margin-left: 60px;
-    width: 340px;
+    margin: 110px 0 0 60px;
+    width: 320px;
+    padding: 30px 20px 20px;
+    border-radius: 6px;
+    background: #fff;
+    text-align: center;
+
+    a:link,
+    a:focus,
+    a:visited,
+    a:active {
+        color: @mozIDBlue;
+    }
 }
 
 h1 {
@@ -46,19 +57,6 @@ h2 {
     color: #fff;
     padding-bottom: 60px;
 
-    .rightcol {
-        margin-top: 110px;
-        width: 320px;
-        padding: 30px 20px 20px;
-        border-radius: 6px;
-        background: #fff;
-        text-align: center;
-
-        a {
-            color: @mozIDBlue;
-        }
-    }
-
     .button-flat-green {
         display: block;
         margin: 10px auto;
@@ -66,86 +64,6 @@ h2 {
         span {
             .font-size(18px);
             text-transform: none;
-        }
-    }
-}
-
-#video {
-    background-color: #005189;
-
-    .container {
-        padding: 60px 0;
-        .at2x('/media/img/firefox/australis/fx38.0.5/firefox-logo-bg.png', 576px, 560px);
-        background-position: left center;
-        background-repeat: no-repeat;
-    }
-
-    .rightcol {
-        .clearfix();
-    }
-}
-
-#video-container {
-    display: none;
-}
-
-#video-frame {
-    // make sure modal video is fully visible on 1280x800 screen
-    width: 94%;
-
-    video {
-        display: block;
-        margin: 0 auto;
-        border-radius: 6px;
-        border: 1px solid #fff;
-    }
-}
-
-#cta-video {
-    float: right;
-    position: relative;
-    display: block;
-    width: 304px;
-    margin-right: 20px;
-    height: 172px;
-    border-radius: 8px;
-    border: 2px solid #3374a1;
-    overflow: hidden;
-    .at2x('/media/img/firefox/spring-campaign-2015/video-poster-thumb.jpg', 304px, 172px);
-
-    span {
-        .image-replaced();
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        margin: -35px 0 0 -35px;
-        display: block;
-        width: 68px;
-        height: 68px;
-        background: #0882be;
-        border-radius: 50%;
-        border: 2px solid #9ccde5;
-        .transition(background 0.25s ease);
-
-        &:before {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            margin: -14px 0 0 -10px;
-            content: '';
-            display: block;
-            width: 0;
-            height: 0;
-            border-top: 15px solid transparent;
-            border-bottom: 15px solid transparent;
-            border-left: 28px solid #fff;
-        }
-    }
-
-    &:hover,
-    &:focus {
-        span {
-            background: lighten(#0882be, 5%);
         }
     }
 }
