--- a/media/css/firefox/releasenotes.less
+++ b/media/css/firefox/releasenotes.less
@@ -659,3 +659,34 @@ article {
         }
     }
 }
+//Relnotes Footer Modifications
+#newsletter-form {
+background-color:#f0f0f0;
+display:none;
+
+}
+.billboard newsletter-form footer-newsletter-form {
+    
+}
+
+#colophon {
+    background-color:#f0f0f0;
+    margin:0;
+    h1 {
+    font-weight:900;
+    }
+    .rel::after {
+    content: " »";
+    }
+}
+
+#conditional-download {
+    background-color:#f0f0f0;
+    margin:0;
+    display:none;
+}
+
+#relnotes-footer {
+    background-color:#f0f0f0;
+    margin:0;
+}
