Fix Bug 1171369, point coderush video link to air mozilla

--- a/bedrock/mozorg/templates/mozorg/about/history-details.html
+++ b/bedrock/mozorg/templates/mozorg/about/history-details.html
@@ -14,10 +14,10 @@
     <h1 class="title-shadow-box">{{ _('History of the Mozilla Project') }}</h1>
 
     <p>
-      {% trans coderush='http://clickmovement.org/coderush',
+      {% trans coderush='https://air.mozilla.org/code-rush/',
                sourcerelease='http://web.archive.org/web/20021001071727/wp.netscape.com/newsref/pr/newsrelease558.html'
       %}
-        The Mozilla project was <a href="{{ coderush }}">created in 1998</a>
+        The Mozilla project was <a href="{{ coderush}}">created in 1998</a>
         with the <a href="{{ sourcerelease }}">release of the Netscape browser
         suite source code</a>.
       {% endtrans %}
