--- a/bedrock/legal/templates/legal/eula.html
+++ b/bedrock/legal/templates/legal/eula.html
@@ -32,11 +32,13 @@
   </section>
 
   <section class="archive">
-    <h3>Outdated policies</h3>
-    <p>Mozilla Firefox End-user Software License Agreement:</p>
+    <h2>Outdated policies</h2>
+    <h3>Mozilla End-user Software License Agreements</h3>
     <ul>
-      <li><a href="{{ url('legal.eula.firefox-2-eula') }}">{{ _('Version 2.0') }}</a></li>
-      <li><a href="{{ url('legal.eula.firefox-3-eula') }}">{{ _('Version 3.0') }}</a></li>
+      <li><a href="{{ url('legal.eula.firefox-2-eula') }}">{{ _('Firefox 2.0') }}</a></li>
+      <li><a href="{{ url('legal.eula.firefox-3-eula') }}">{{ _('Firefox 3.0') }}</a></li>
+      <li><a href="{{ url('legal.eula.thunderbird-1.5-eula') }}">{{ _('Thunderbird 1.5') }}</a></li>
+      <li><a href="{{ url('legal.eula.thunderbird-2-eula') }}">{{ _('Thunderbird 2') }}</a></li>
     </ul>
   </section>
 
