--- a/bedrock/firefox/templates/firefox/nightly_firstrun.html
+++ b/bedrock/firefox/templates/firefox/nightly_firstrun.html
@@ -15,6 +15,7 @@
 {% add_lang_files "firstrun" "mobile" %}
 
 {% block page_title_prefix %}{% endblock %}
+{% block page_favicon %}{{ static('img/firefox/favicon-nightly.png') }}{% endblock %}
 {% block page_title %}{{ _('Firefox Nightly First Run Page') }}{% endblock %}
 {% block page_title_suffix %}{% endblock %}
 {% block body_id %}firefox-firstrun{% endblock %}
