--- a/media/css/firefox/releasenotes.less
+++ b/media/css/firefox/releasenotes.less
@@ -665,19 +665,26 @@ background-color:#f0f0f0;
 display:none;
 
 }
-.billboard newsletter-form footer-newsletter-form {
-    
-}
 
 #colophon {
     background-color:#f0f0f0;
     margin:0;
+    padding:10px 0 20px 0;
     h1 {
     font-weight:900;
     }
     .rel::after {
     content: " »";
     }
+    .rel-download {
+    display:block;
+    width:auto;
+    text-indent:30px;
+    }
+    .rel-download::after {
+    content: " »";
+    }
+    width:100%;
 }
 
 #conditional-download {
@@ -689,4 +696,718 @@ display:none;
 #relnotes-footer {
     background-color:#f0f0f0;
     margin:0;
+}
+
+
+//Stuff for the conditional download button
+.version-message {
+    display: none;
+    padding:0;
+
+    &:before {
+        .inline-block;
+        margin: 0 0 0 0;
+        width: 25px;
+        height: 25px;
+        vertical-align: text-bottom;
+        background: url(/media/img/firefox/new/icon-alert.svg) center center no-repeat;
+        content: '';
+    }
+}
+
+.version-message-secondary {
+    display: block;
+    padding: 0;
+    background: transparent;
+    .font-size(@largeFontSize);
+}
+
+
+.latest-links-wrapper {
+    display: none;
+    padding-top: 13px;
+    text-align: center;
+    ul {
+        margin: 0;
+        li {
+            margin: 0;
+            padding: 3px 0 2px;
+            list-style: none;
+            line-height: 1.2;
+        }
+    }
+}
+
+.download-button-wrapper {
+    margin: 0;
+    width: auto;
+}
+
+#scene1 > .download-other-desktop {
+    position: absolute;
+    bottom: 240px;
+    left: 50%;
+    margin-left: -170px;
+    width: 340px;
+    text-align: center;
+    .font-size(@baseFontSize);
+    color: @textColorLight;
+    z-index: 2;
+}
+
+/* Unsupported platforms */
+html.windows.arm,
+html.oldmac,
+html.oldwin {
+    .download-button .unsupported-download {
+        margin: 32px 0 0;
+        text-align: left;
+    }
+}
+
+/* iOS */
+html.ios {
+    .version-message-container {
+        display: block;
+    }
+
+    #version-message-ios {
+        display: inline;
+
+        &:before {
+            background-image: url(/media/img/firefox/new/icon-mobile.svg);
+        }
+    }
+
+    .desktop.download-button-wrapper {
+        display: none;
+    }
+
+    .ios-links-wrapper {
+        display: block;
+        padding-top: 26px;
+    }
+    .desktop-latest-links-wrapper {
+        display: none;
+    }
+}
+
+/* desktop version (with Firefox) */
+html.firefox-latest {
+    .version-message-container {
+        display: block;
+    }
+
+    #version-message-desktop-latest {
+        display: inline;
+
+        &:before {
+            background-image: url(/media/img/firefox/new/icon-check.svg);
+        }
+    }
+
+    /* hide download button */
+    .desktop.download-button-wrapper {
+        display: none;
+    }
+
+    /* show helpful links */
+    .desktop-latest-links-wrapper {
+        display: block;
+    }
+
+    #theater-firefox,
+    #stage-firefox {
+        height: auto;
+    }
+
+    #scene1 {
+        position: relative;
+        height: auto;
+    }
+
+    #firefox-screenshot,
+    #scene2 {
+        display: none;
+    }
+
+    #newsletter-latest {
+        display: block;
+    }
+
+    small.download-other {
+        display: none;
+    }
+}
+
+// desktop user with version exactly matching latest release version
+#refresh-firefox-wrapper {
+    display: none;
+}
+
+html.show-refresh {
+    #refresh-firefox-wrapper {
+        display: block;
+        margin: (@baseLine * 2) 0 @baseLine;
+
+        p {
+            font-style: normal;
+            margin-bottom: @baseLine / 2;
+        }
+
+        a {
+            color: @textColorTertiary;
+            font-style: normal;
+            .font-size(12px);
+            .trailing-arrow();
+        }
+    }
+
+    #refresh-firefox {
+        display: block;
+        width: 260px;
+        margin: 0 auto;
+        border-radius: 8px;
+        padding: 15px;
+        font-weight: normal;
+        .font-size(22px);
+    }
+
+    #main-feature,
+    .hide-for-refresh {
+        display: none;
+    }
+}
+
+html.firefox-old {
+    .version-message-container {
+        display: block;
+    }
+
+    #version-message-desktop-old {
+        display: inline;
+    }
+}
+
+/* Android version message (with Firefox) */
+html.android {
+    &.firefox-latest {
+        .version-message-container {
+            display: block;
+        }
+
+        #version-message-android-latest {
+            display: inline;
+
+            &:before {
+                background-image: url(/media/img/firefox/new/icon-check.svg);
+            }
+        }
+
+        #version-message-desktop-latest {
+            display: none;
+        }
+
+        /* hide download button */
+       .android.download-button-wrapper {
+            display: none;
+        }
+
+        /* show helpful links */
+        .android-latest-links-wrapper {
+            display: block;
+            padding-top: 38px;
+        }
+        .desktop-latest-links-wrapper {
+            display: none;
+        }
+    }
+
+    &.firefox-old {
+        .version-message-container {
+            display: block;
+        }
+
+        #version-message-android-old {
+            display: inline;
+        }
+
+        #version-message-desktop-old {
+            display: none;
+        }
+    }
+
+    .download-button-wrapper {
+        display: none;
+        width: 250px;
+        margin: 0 auto;
+        text-align: center;
+
+        &.android {
+            display: block;
+            margin-top: 22px;
+        }
+    }
+}
+
+/* FxOS */
+html.fxos {
+    // hide conditional messaging for firefox users,
+    // they get updates from the OS directly.
+    .version-message-container {
+        display: none;
+    }
+
+    .fxos-latest-links-wrapper {
+        display: block;
+        padding-top: 26px;
+    }
+
+    #firefox-screenshot {
+        display: none;
+    }
+
+    .desktop-latest-links-wrapper {
+        display: none;
+    }
+}
+
+/* Linux on ARM processors */
+.linux.arm {
+    .version-message-container {
+        display: block;
+    }
+
+    #version-message-linux-arm {
+        display: inline;
+    }
+
+    #theater-firefox,
+    #stage-firefox,
+    #scene1 {
+        position: relative;
+        height: auto;
+    }
+
+    #version-message-desktop-latest,
+    #version-message-desktop-old,
+    #features-download {
+        display: none;
+    }
+
+    /* hide the newsletter box while keeping the height of the screenshot */
+    #newsletter-latest {
+        display: block;
+        visibility: hidden;
+    }
+}
+
+#main-feature {
+    margin-top: 14px;
+    padding-bottom: 20px;
+    h1.large {
+        margin: 12px 50px;
+        text-align: center;
+        .font-size(60px);
+        span { white-space: nowrap; }
+    }
+    img { display: none; }
+}
+
+html[lang|="en"] #main-feature h1.large span:first-child {
+    display: inline-block;
+    width: 100%;
+}
+
+.download-button-wrapper.android {
+    display: none;
+}
+
+.ready-for-scene2 {
+    .thankyou {
+        background: url(/media/img/firefox/new/thankyou-check.png) left top no-repeat;
+        padding: 0 0 0 35px;
+        margin: 0 130px 0;
+        color: @buttonGreenDark;
+        font-style: italic;
+        .font-size(18px);
+        .open-sans-light;
+        &:focus {
+            outline: none;
+        }
+    }
+
+    .installation {
+        margin: 12px 10px 0;
+        padding: 0;
+        display: block;
+        list-style-type: none;
+        .clearfix;
+        li {
+            .span(4);
+            *display: inline;
+            overflow: hidden;
+            text-align: left;
+            .font-size(@smallFontSize);
+            color: @textColorTertiary;
+            font-style: italic;
+            .screen {
+                display: block;
+                width: 298px;
+                height: 150px;
+                border: 1px solid #ccc;
+                margin-bottom: 5px;
+                background-size: 100%;
+                background-color: transparent;
+                background-repeat: no-repeat;
+                background-position: 0 0;
+            }
+            &.install2 .screen { background-position: 0 -160px; }
+            &.install3 .screen { background-position: 0 -320px; }
+        }
+    }
+
+}
+
+.osx     .ready-for-scene2 .screen { background-image: url(/media/img/firefox/new/install-mac.jpg); }
+.windows .ready-for-scene2 .screen { background-image: url(/media/img/firefox/new/install-win.jpg); }
+.winIE8  .ready-for-scene2 .screen { background-image: url(/media/img/firefox/new/install-winIE8.jpg); }
+
+.osx     .install-win,
+.linux   .install-win,
+.windows .install-osx,
+.linux   .install-osx,
+.linux   .install1 strong,
+.linux   .installation .install1 .screen,
+.linux   .install2,
+.linux   .install3 {
+    display: none;
+}
+
+.linux .installation .install1 {
+    .span-all();
+    padding: 0;
+    text-align: center;
+}
+
+.theater {
+    position: relative;
+    margin: 0 auto;
+    width: 100%;
+    height: 420px;
+    overflow: hidden;
+
+    /* shorter list in iOS, decrease available space */
+    .ios & {
+        height: 360px;
+    }
+}
+
+.mobile {
+    display: none;
+}
+
+// android view
+.android {
+    .mobile {
+        display: none;
+    }
+    .desktop {
+        display: block;
+    }
+}
+
+.stage {
+    position: relative;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 800px;
+    .transition(bottom 0.4s ease 0.1s);
+
+    &.scene2 {
+        bottom: -420px;
+        #scene2 { visibility: visible; }
+    }
+}
+
+.stage-no-anim {
+    .transition(none);
+}
+
+.scene {
+    position: absolute;
+    left: 0;
+    height: 420px;
+    width: 100%;
+    .clearfix;
+    overflow: hidden;
+
+    /* shorter list in iOS, decrease available space */
+    .ios & {
+        height: 360px;
+    }
+}
+
+#scene1 {
+    top: 0;
+}
+
+#scene2 {
+    top: -420px;
+    visibility: hidden;
+}
+
+#firefox-screenshot {
+    position: absolute;
+    right: 20px;
+    left: 20px;
+    bottom: 0;
+    text-align: center;
+    .platform-img {
+        vertical-align: bottom;
+    }
+}
+
+.share-wrapper {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.mozilla-share-cta {
+    margin: 0 auto;
+}
+
+/* Newsletter signup shown to up-to-date users */
+#newsletter-latest {
+    display: none;
+    margin: @baseLine * 2 auto @baseLine * 4 auto;
+}
+
+noscript {
+    .button-white, .button-white:link, .button-white:visited {
+        min-width: 0;
+    }
+}
+
+/* Tablet Layout: 760px */
+@media only screen and (min-width: @breakTablet) and (max-width: @breakDesktop) {
+    #wrapper {
+        width: 100%;
+        padding: 0;
+    }
+    .theater, .stage {
+        height: 360px;
+
+        /* shorter list in iOS, decrease available space */
+        .ios & {
+            height: 300px;
+        }
+    }
+
+    #colophon {
+        width:auto;
+        padding:10px 0 20px 0;
+    }
+
+    .js .scene {
+        height: 360px;
+
+        /* shorter list in iOS, decrease available space */
+        .ios& {
+            height: 300px;
+        }
+    }
+
+    #main-feature h1.large {
+        margin: 12px 0;
+        .font-size(55px);
+    }
+
+    #firefox-screenshot {
+        padding: 0;
+    }
+
+    .ready-for-scene2 {
+        .thankyou {
+            margin: 0 40px;
+        }
+        .installation {
+            margin: 12px 20px 0;
+            li {
+                .span_narrow(4);
+                .screen {
+                    width: 218px;
+                    height: 109px;
+                }
+                &.install2 .screen { background-position: 0 -117px; }
+                &.install3 .screen { background-position: 0 -234px; }
+            }
+        }
+    }
+}
+
+/* Mobile layout: 320px */
+@media only screen and (max-width: @breakTablet) {
+    #wrapper {
+        width: 100%;
+        padding: 0;
+    }
+    #colophon {
+        padding: 10px 0 20px 0;
+        .primary {
+            text-align: left;
+            li {
+                display: block;
+                margin-left: 0;
+                a, a:link, a:visited {
+                    display: block;
+                    border-left: none;
+                    border-top: 1px dotted @textColorLight;
+                    padding: 0;
+                }
+                &:first-child a {
+                    border: 0;
+                }
+            }
+        }
+    }
+    #masthead h2 { display: none; }
+    .theater, .stage, .scene {
+        height: 450px;
+    }
+    .stage.scene2 {
+        bottom: -450px;
+    }
+    #scene2 {
+        top: -450px;
+    }
+    .version-message-container {
+        padding: 0 0 0;
+        .font-size(18px);
+    }
+    #main-feature {
+        margin: 0;
+        padding: 0 0;
+        .row {
+            .clearfix;
+            width: 300px;
+            margin: 0 auto;
+        }
+        h1.large {
+            margin: 12px 0;
+            .font-size(36px);
+            letter-spacing: -1px;
+        }
+        img {
+            display: block;
+            margin: 0 auto;
+        }
+    }
+
+    #firefox-screenshot { display: none; }
+
+    #features-download {
+        padding-top: 10px;
+        .download-button {
+            display: block;
+        }
+    }
+
+    .latest-links-wrapper {
+        margin: 0 10px;
+        padding: 0;
+    }
+
+    html.windows.arm,
+    html.oldmac,
+    html.oldwin {
+        .download-button .unsupported-download {
+            text-align: left;
+            max-width: none;
+        }
+    }
+
+    html.android {
+        .mobile {
+            display: none;
+        }
+        .desktop {
+            display: none;
+        }
+
+        .stage,
+        .theater {
+            height: 200px;
+        }
+
+        &.firefox-latest .android-latest-links-wrapper {
+            padding: 0;
+        }
+    }
+
+    html.fxos {
+        .fxos-latest-links-wrapper {
+            padding: 0;
+        }
+    }
+
+    html.ios {
+        .stage,
+        .theater {
+            height: 100px;
+        }
+
+        .ios-links-wrapper {
+            padding: 0;
+        }
+    }
+
+    .download-button-wrapper {
+        text-align: center;
+        .download-button {
+            text-align: center;
+
+            small.download-other {
+                text-align: center;
+                margin-top: 16px;
+            }
+        }
+    }
+
+    .ready-for-scene2 {
+        .thankyou {
+            margin: 10px 0 0 0;
+            .font-size(@baseFontSize);
+            letter-spacing: auto;
+        }
+
+        .installation {
+            width: 300px;
+            margin: 20px 0 0;
+            li {
+                width: auto;
+                margin-bottom: 10px;
+                float: none;
+                font-style: normal;
+                text-align: left;
+                padding: 0;
+            }
+        }
+    }
+    .osx,
+    .windows,
+    .winIE8 {
+        .ready-for-scene2 .installation li .screen { display: none; }
+    }
+
+    .footer-newsletter-form {
+        padding-top: 20px;
+
+        input[type=email],
+        input[type=submit] {
+            .border-box();
+            width: 100%;
+        }
+    }
 }
